# tubes_ddp_aplikasi_keuangan_b11

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: analisis_01.txt  analisis_11.txt  pos_11.txt  transaksi.txt
include/: analisis.h  app_menu.h  constants.h  file.h  laporan.h  perhitungan.h  pos.h  pos_anggaran.h  transaksi.h  tui.h  types.h  utils.h  validasi.h
include/analisis/: analisis_calc.h  analisis_display.h  analisis_handler.h
include/file/: file_analisis.h  file_core.h  file_parser.h  file_pos.h  file_transaksi.h
include/pos/: pos_calc.h  pos_crud.h  pos_display.h  pos_handler.h  pos_menu.h
include/transaksi/: transaksi_crud.h  transaksi_display.h  transaksi_handler.h  transaksi_menu.h
include/tui/: tui_color.h  tui_core.h  tui_input.h  tui_menu.h  tui_message.h  tui_table.h
include/utils/: utils_array.h  utils_bulan.h  utils_date.h  utils_number.h  utils_string.h
include/validator/: validator_date.h  validator_number.h  validator_pos.h  validator_string.h
src/: analisis.c  app_menu.c  file.c  laporan.c  main.c  operasi_file.c  perhitungan.c  pos.c  pos_anggaran.c  tampilan.c  transaksi.c  tui.c  utils.c  validasi.c
src/analisis/: analisis_calc.c  analisis_display.c  analisis_handler.c
src/file/: file_analisis.c  file_core.c  file_parser.c  file_pos.c  file_transaksi.c
src/pos/: pos_calc.c  pos_crud.c  pos_display.c  pos_handler.c  pos_menu.c
src/transaksi/: transaksi_crud.c  transaksi_display.c  transaksi_handler.c  transaksi_menu.c
src/tui/: tui_color.c  tui_core.c  tui_input.c  tui_menu.c  tui_message.c  tui_table.c
(+9 files in other folders)
